message box z-index issue OK

--- a/client/app/styles/main.styl
+++ b/client/app/styles/main.styl
@@ -19,6 +19,7 @@ div.column
   position: absolute
   top: 15px
   right: 15px
+  z-index: 9
   
 iframe
   border-top-width: 0px
